fix(navbar): make improvements to the navbar visibility on smaller devices

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -114,3 +114,19 @@
     }
   }
 }
+
+@media (max-width: 1382px) {
+  .tags {
+    left: 90px;
+  }
+}
+
+@media (max-width: 768px) {
+  .tags {
+    bottom: 100px;
+    left: 30px;
+  }
+  .container {
+    top: 0;
+  }
+}
